--- a/index.html
+++ b/index.html
@@ -85,56 +85,42 @@
           <p>也因為我喜歡學習新的事物，以及與更多人交流、溝通合作，因此大四因為想要學習Swift與視覺化介面，因此選擇離開華碩來到ETtoday(東森新聞雲）的研發部門，在這裡也熟悉到一個APP上市所需要的工具，像是API的架接、資料的檢查等等。</p>	
           <p>因為工作的關係，讓我更清楚我自己想要什麼，我是一個理性且思緒清楚的人，未來想從事與軟體工程相關的工作，工欲善其事必先利其器，因為決定了未來的目標，所以報名了AppWorks School的ios課程，想要更加的精進自己讓自己成為軟體工程師，並且對於像外太空一般無邊無際的軟體有更加深刻的認識。</p>			
         </div>
-        <div class="horizontal_line">
-          <div class="line_left"></div>
-          <div class="left_circle"></div>
-          <div class="central_circle"></div>
-          <div class="right_circle"></div>
-          <div class="line_right"></div>
-        </div>
-        <div class="block">
-          <h2>未來規劃</h2>
-          <h4>短期</h4>
-          <p>畢業前會以準備多益英文鑑定為主，透過提升英文能力也可以提升自己對於開發時看英文的速度，並且使用線上教材學習Swift以及Github版控等</p>
-          <h4>中期</h4>
-          <p>努力成為AppWorks School的一份子，在課程中努力學習成為ios軟體工程師的能力以及需要的知識、經驗</p>
-          <h4>長期</h4>
-          <p>找到一份ios開發軟體工程師的工作，也持續使用線上課程（例:Udemy)努力精進自己，讓自己可以有更高階的實力去挑戰更多新鮮的事物</p>
-
-          <div class="philosophy_content">
-
-
-      <div class="clear"></div>
-    </div>
-  </div>
   <div class="horizontal_line">
     <div class="line_left"></div>
-    <div class="left_circle"></div>
-    <div class="central_circle"></div>
-    <div class="right_circle"></div>
-    <div class="line_right"></div>
   </div>
-  <div class="last block">
-    <h2>工作經歷</h2>
-    <p>cd ASUS AI</p>
-    <p>cd ..</p>
-    <p>cd ETtoday APP</p>
-    <ul>
-      <li>華碩的一年半</li>
-      <p>在有關AI相關的部門工作，主要的工作有例行性的軟韌體更新測試（像是機器人的防碰撞、軟韌體壓力測試、AI大數據資料收集等），有的時候還需要操作示波器檢查聲納、Button等訊號是否正常，日常的Bug與釐清更是必需品，需要撰寫測試案例以及觀看規格書，複驗與開立issue協助RD釐清並找出問題。</p>            
-      <li>ETtoday的現在進行式</li>
-      <p>主要是協助測試Android與Ios的APP軟體開發，像是會運用到Jenkins、postman等軟體進行資料的修改與問題的釐清等，並且回報給QA即時的軟體狀況</p>
-      <li>淡江大學工讀生</li>
-      <p>  目前也在淡江大學擔任工讀生，因為疫情的關係，加快的數位化教學的推動，但是面對於時代的急劇變化，師長們在學習數位化的過程也是相當辛苦，在工讀時我也會協助處室的學姊們，當他們有跟資訊相關的東西不會時，也會積極且仔細地跟他們說如何操作與回答他們所好奇的問題，如果我也有卡關時，我也會立刻去找出答案，充分理解後並告知他們。</p>
-    </ul>
-  </div>
-</div>
+    <div class="block">
+      <h2>工作經歷</h2>
+      <ul class="listExperience">
+        <li class="year">2020
+          <ul>
+            <li><strong>華碩電腦股份有限公司/測試助理工程員</strong></li>
+            <li>Functional Test</li>
+            <li>GUI Testing</li>
+            <li>Test Case撰寫</li>
+            <li>Stress Test</li>
+            <li>Bug report</li>
+          </ul>
+        </li>
+        <li class="year">2021
+          <ul>
+            <li><strong>ETtoday東森新媒體/測試助理</strong></li>
+            <li>IOS/Andriod APP 軟體測試</li>
+            <li>測試案例執行與建立</li>
+            <li>搜集、追蹤測試數據</li>
+
+          </ul>
+        </li>
+        <li class="year">2021
+          <ul>
+            <li><strong>淡江大學行政副校長室/行政工讀生</strong></li>
+            <li>PowerPoint製作</li>
+            <li>行政公文收發</li>
+          </ul>
+        </li>
+      </ul>
+    </div>
+
 <div class="clear"></div>
-<!-- FOOTER -->
-<div id="footer">
-  <p class="footer_name">Javier Latorre CV 2015</p>
 </div>
-</div>
-<script src="./resume.js"></script>
 </body>
 </html>
